--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <script src="phaser.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.min.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
