--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,6 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="msapplication-tap-highlight" content="no">
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-
   <style>
     html, body {
       height: 100%;
@@ -19,6 +18,7 @@
   </style>
 </head>
 <body>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.6.2/pixi.min.js"></script>
   <script src="index.js"></script>
 </body>
