--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="msapplication-tap-highlight" content="no">
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+  <link rel="shortcut icon" href="assets/icon.png">
   <style>
     html, body {
       height: 100%;
