--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
     html, body {
       height: 100%;
       width: 100%;
+      background-color: #000;
       margin: 0;
       padding: 0;
       overflow: hidden;
