--- a/www/index.html
+++ b/www/index.html
@@ -19,8 +19,7 @@
   </style>
 </head>
 <body>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.6.2/pixi.min.js"></script>
+  <script src="pixi.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
