--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       name="viewport"
       content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width"
     />
-    <link rel="shortcut icon" href="/icon.9c86b69e.png" />
+    <link rel="shortcut icon" href="./icon.9c86b69e.png" />
     <style>
       html,
       body {
@@ -23,12 +23,12 @@
     </style>
   </head>
   <body>
-    <script src="vendors/pixi.min.js"></script>
+    <script src="./vendors/pixi.min.js"></script>
     <script>
       window.PIXI = PIXI;
       window.PIXI["default"] = PIXI;
     </script>
-    <script src="vendors/pixi-filters.js"></script>
-    <script src="/src.7ed060e2.js"></script>
+    <script src="./vendors/pixi-filters.js"></script>
+    <script src="./src.7ed060e2.js"></script>
   </body>
 </html>
